--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
 		<title>Jewellery Catalogue</title>
     
 	</head>
-    <body style="background-color: #ccdaf4">
+    <body style="background-color: #CCDAF4">
         <div id="root"></div>
         <script type="module" src="/src/index.tsx"></script>
     </body>
